<resources>
    <string name="app_name">OverTime</string>

    <!--common-->
    <string name="Positive">确定</string>
    <string name="Negative">取消</string>
    <string name="Delete">删除</string>
    <string name="select_all">全选</string>
    <string name="select_all_reverse">取消全选</string>
    <string name="searchable">search</string>

    <string name="error_name_is_null">名称不能为空</string>

    <!-- MainActivity -->
    <string name="under_construction">前方正在施工&#8230;</string>
    <string name="no_tasks">没有活动的任务</string>
    <string name="activate_tasks">当前任务</string>

    <string name="tasks_manager">任务管理</string>
    <string name="tasks_analysis">任务统计</string>
    <string name="tasks_add">添加任务</string>

    <string name="tasks_more">更多></string>
    <string name="More">更多</string>
    <string name="Manage">管理</string>
    <string name="Create">创建</string>

    <!-- AddTaskActivity -->
    <string name="create_task">创建新任务</string>
    <string name="create_manual">创建长期任务</string>
    <string name="create_timing">创建定时任务</string>
    <string name="create_short">创建单次任务</string>
    <string name="create_limited">创建定期任务</string>

    <!--menu-->
    <string name="action_completed">归档</string>
    <string name="action_recycled">回收</string>

    <!--page titles-->
    <string name="title_tasks_manage">任务管理</string>

    <!--TasksManageFragment-->
    <string name="task_groups">任务组</string>
    <string name="add_taskgroup">添加分组</string>
    <string name="edit_taskgroup_list">编辑分组</string>
    <string name="create_task_group">新建任务小组</string>
    <string name="hint_input_group_name">请输入小组名</string>

    <!-- -->
    <string name="hint_search">输入要查询的任务&#8230;</string>
    <string name="my_tasks">我的任务</string>
    <string name="select_handle">选择操作</string>
    <string name="choose_group">选择目的分组：</string>
    <string name="cd_running">正在执行</string>
    <string name="no_more">没有更多了</string>
    <string name="create_task_name">输入任务名</string>
    <string name="target_group">目的分组：</string>
    <string name="task_details">任务详情</string>
    <string name="stop_all">全部停止</string>
    <string name="stop_task">停止任务</string>
    <string name="has_running">任务执行中</string>
    <string name="task_running_list">运行的任务列表</string>
    <string name="add_episode">添加事件</string>
    <string name="start_time">开始时间：</string>
    <string name="current_used">已进行时间：</string>
    <string name="episode_empty">^_^</string>
    <string name="insert_episode">创建事件</string>
    <string name="time_zero">00:00:00</string>
</resources>
