<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="handler"
            type="wistcat.overtime.main.tasksmanage.HandleCreateTaskGroup"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/bottom_list_padding_left"
            android:text="@string/create_task_group"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_group_name"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="20"
                android:singleLine="true"
                android:text="@={handler.input}"
                android:textSize="16sp"
                android:onClick="@{()->handler.clearError(textInput)}"
                style="@style/AlertDialog.AppCompat.Light"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?attr/buttonBarStyle">
            <View
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/Negative"
                style="?attr/buttonBarNegativeButtonStyle"
                android:onClick="@{()->handler.onQuit()}"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/Positive"
                style="?attr/buttonBarPositiveButtonStyle"
                android:onClick="@{()->handler.onConfirm(textInput)}"/>
        </LinearLayout>

    </LinearLayout>

</layout>
