<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:lineSpacingMultiplier="1.5"
        android:textColor="@color/DarkGrey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/choose_group"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?attr/buttonBarStyle">
        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/negative"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/Negative"
            style="?attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/positive"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/Positive"
            style="?attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>