<?xml version="1.0" encoding="utf-8"?>
<wistcat.overtime.widget.ScrollChildSwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:background="@color/bg_tasks_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/tasks_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:baselineAligned="false"
                style="?attr/buttonBarStyle">
                <FrameLayout
                    android:id="@+id/tasks_manage"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:foreground="@drawable/foreground_grey">
                    <TextView
                        style="@style/GuideTextStyle"
                        android:drawableLeft="@drawable/vec_sentiment_neutral"
                        android:text="@string/tasks_manager"/>
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/tasks_analyse"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:foreground="@drawable/foreground_grey">
                    <TextView
                        style="@style/GuideTextStyle"
                        android:drawableLeft="@drawable/vec_equalizer"
                        android:text="@string/tasks_analysis"/>
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/tasks_create"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:foreground="@drawable/foreground_grey">
                    <TextView
                        style="@style/GuideTextStyle"
                        android:drawableLeft="@drawable/vec_add"
                        android:text="@string/tasks_add"/>
                </FrameLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/Grey"/>

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nested"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp">
                        <TextView
                            android:id="@+id/text_activate_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="@dimen/left_offset"
                            android:drawableLeft="@drawable/circle_1"
                            android:drawablePadding="4dp"
                            android:gravity="center_vertical"
                            android:text="@string/activate_tasks"
                            android:textSize="14sp"
                            android:textColor="@color/DarkGrey"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"/>

                        <TextView
                            android:id="@+id/text_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="4dp"
                            android:gravity="center_vertical"
                            android:text="@string/tasks_more"
                            android:textSize="14sp"
                            android:textColor="@color/DarkGrey"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"/>
                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/text_no_task"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="100dp"
                            android:textColor="@color/Grey"
                            android:visibility="gone"
                            android:text="@string/no_tasks"/>
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/tasks_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/White"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
                    </FrameLayout>

                    <android.support.v4.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bottom_peek_height"/>
                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/running"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_peek_height"
            android:background="@color/White"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:visibility="gone">
        </LinearLayout>
    </FrameLayout>

</wistcat.overtime.widget.ScrollChildSwipeRefreshLayout>